# tic-tac-terminal

./: Cargo.toml  README.md
src/: board.rs  game.rs  lib.rs  main.rs  player.rs  tictactoe.rs  ui.rs
src/player/: minimax.rs
src/ui/: tui.rs
